Changed path for creating templates.
