# service/core/action/post/route.go
@@ -41,13 +41,13 @@ func Router() chi.Router {
 
 	r.With(util.CheckKetoPolicy(entity, "get")).Get("/", list)
 	r.With(util.CheckKetoPolicy(entity, "create")).Post("/", create)
+	r.With(util.CheckKetoPolicy(entity, "update")).Post("/templates", createTemplate)
 
 	r.Route("/{post_id}", func(r chi.Router) {
 		r.With(util.CheckKetoPolicy(entity, "get")).Get("/", details)
 		r.With(util.CheckKetoPolicy(entity, "update")).Put("/", update)
 		r.With(util.CheckKetoPolicy(entity, "delete")).Delete("/", delete)
 		r.With(util.CheckKetoPolicy(entity, "publish")).Put("/publish", publish)
-		r.With(util.CheckKetoPolicy(entity, "update")).Post("/templates", createTemplate)
 	})
 
 	return r
